tests/machine/x/ocaml/outer_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/outer_join.ml", line 35, characters 6-15:
35 |     ) customers;
           ^^^^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 35):
  33 |         __res0 := { order = o; customer = c } :: !__res0;
  34 |         matched := true)
  35 |     ) customers;
  36 |     if not !matched then (
  37 |       let c = Obj.magic () in
